[BUGFIX] file module dark mode

--- a/Resources/Private/Less/ModuleFile.less
+++ b/Resources/Private/Less/ModuleFile.less
@@ -1,9 +1,5 @@
 @import "config";
 
-.module-body {
-	background-color: #fff;
-}
-
 .csseo-progress {
     margin-bottom: 20px;
 }
@@ -14,7 +10,6 @@
     margin: 1rem 0;
 
     &__row {
-        background: #f5f5f5;
         align-items: center;
         display: flex;
         flex-wrap: wrap;
